Postman tests for filters in all classes